--- a/src/ListenTogether/Pages/LoginPage.xaml
+++ b/src/ListenTogether/Pages/LoginPage.xaml
@@ -4,8 +4,8 @@
              x:Class="ListenTogether.Pages.LoginPage"
              Title="登录"
              BackgroundColor="#F7F7F7">
-    
-    <StackLayout Margin="16"
+
+    <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
                  MaximumWidthRequest="{OnPlatform  UWP=400,MacCatalyst=400}">
 
         <StackLayout Margin="0,0,0,20"
