--- a/src/ListenTogether/Pages/SearchPage.xaml
+++ b/src/ListenTogether/Pages/SearchPage.xaml
@@ -7,7 +7,7 @@
              Title="搜索"
              BackgroundColor="#F7F7F7">
 
-    <StackLayout Margin="16">
+    <StackLayout Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}">
         <StackLayout Margin="0,0,0,20"
                      Orientation="Horizontal"
                      VerticalOptions="Start">
