--- a/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
+++ b/src/ListenTogether/Resources/Styles/DefaultTheme.xaml
@@ -26,7 +26,7 @@
     <Style TargetType="Label"
            x:Key="Title">
         <Setter Property="FontSize"
-                Value="20" />
+                Value="{OnPlatform UWP=20,MacCatalyst=20,Android=18,iOS=18}" />
         <Setter Property="TextColor"
                 Value="{AppThemeBinding Light={StaticResource LightTitle}, Dark={StaticResource DarkTitle}}" />
     </Style>
