1、修改播放页的样式。2、修改播放组件的样式。

--- a/src/ListenTogether/App.xaml
+++ b/src/ListenTogether/App.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary>
             <toolkit:IsEqualConverter x:Key="IsEqualConverter" />
             <toolkit:IsNotEqualConverter x:Key="IsNotEqualConverter" />
+            <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
